Ready for submission (except references aren't working)

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,4 @@
-\clearpage
 %\section{acknowledgements}
 \textbf{Acknowledgements}:
 \label{acknowledgements}
-A big thank-you is in order for Dr. Ringger for having taught me what I was lacking for this project. I thank my wife for being my best friend. She has proven to be true help-meet for me, especially when times get tough, such as when your database gets corrupted or locks up or when you think you are a victim of an amazing virus and is willing to help you change all your passwords at a moment's notice.
+A big thank-you is in order for Dr. Ringger for having taught me what I was lacking for this project. I thank my wife for being my best friend. She has proven to be true help-meet for me, especially when times get tough, such as when your database gets corrupted or locks up or when you think you are a victim of an amazing virus and has been willing to help me change all my passwords at a moment's notice.
