--- a/appendix.tex
+++ b/appendix.tex
@@ -1,2 +1,24 @@
 \section{Appendix}
 %\input{appendix-test-items}
+
+\begin{table}[center]
+	\centering
+	\begin{center}
+		\begin{tabular}{|c|l|} \hline
+			\textbf{Topic}					& \textbf{Some Associated Words}		\\ \hline \hline
+			0						& president church lord twelve kimball presidency prophet called general quorum apostles \\\									& lee smith sustain authority council office sustained authorities	\\ \hline
+			48						& kingdom lord ye life man eternal heaven men righteousness receive salvation \\
+									& commandments perfect things enter knowledge master exaltation end	\\ \hline
+			57						& welfare poor church fast needy care program principles services bishop family bishops \\
+									& plan relief members food assistance temporal storehouse	\\ \hline
+			64						& program church leaders services programs members system activities problems area \\
+									& welfare local priesthood service plan council areas work general	\\ \hline
+			70						& covenants doctrine nephi savior monson alma thomas matthew atonement world mosiah \\
+									& president faith elder family taught testify john	\\ \hline
+			90						& spiritual personal family members seek counsel time spiritually process ways physical \\
+									& individual challenges provide sacred essential challenge important focus	\\ \hline
+		\end{tabular}
+	\end{center}
+	\caption{Topics with range of greater than 3\% probability of occurrence and their associated words according to Gibbs sampling.}
+	\label{tab:select-topics}
+\end{table}
