--- a/citations.bib
+++ b/citations.bib
@@ -36,6 +36,22 @@
   URL = {https://github.com/~bean5/Java-Porter-Stemmer}
 }
 
+@unpublished{McCallumMALLET,
+  author = {Andrew Kachites McCallum},
+  title = {MALLET: A Machine Learning for Language Toolkit},
+  note = {http://mallet.cs.umass.edu},
+  year = {2002}
+}
+
+@ONLINE{nodeJS,
+  AUTHOR  = {Joyent, Inc.},
+  TITLE   = {NodeJS},
+  Month = oct,
+  Year = {2013},
+  NOTE = "[Online; Accessed on 2013-10-24]",
+  URL = {https://github.com/joyent/node}
+}
+
 @ONLINE{mormon.org-rs,
   AUTHOR  = {Mormon.org},
   TITLE   = {What is the Relief Society?},
@@ -179,7 +195,7 @@ Although the texts are far removed from the type of texts that I will encounter,
   annote = {``This paper describes the usage of Natural Language Processing tools...to study semantics (word correlations) in a collection of Persian poems...both modern and ancient...In the analysis step, we obtained very interesting and meaningful results regarding the correlation between poets and topics, their \textit{evolution through time}, as well as the correlation between the topics and the metre used in the poems.'' }
 }
 
-@MISC{Krstovski2013efficient,
+@MISC{krstovski2013efficient,
   author  = {Krstovski, Smith and McGregor, Wallach},
   title   = {Efficient Nearest-Neighbor Search in the Probability Simplex},
   year    = {2013},
