--- a/future-work.tex
+++ b/future-work.tex
@@ -1,10 +1,7 @@
 \section {Future Work}
-%\textbf{}
-This work can be used for future work in several ways. Following are some examples 
+The possibilities for future work is apparent. Besides the future work mentioned already, following are some examples:
 	\begin {itemize}
+		\item Use topical n-grams and compare to unigram models such as the ones used here.
 		\item Use some method to locate pairs of nearest neighbor documents, perhaps using a method similar to that used in \cite{Krstovski2013efficient}
-%		\item [Insert more here]
 	\end {itemize}
-The possibilities for future work is apparent. 
 
-Future work need not focus on only one of the above at a time.  Studies could perform two or more of the above if desired. 
