--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \section {Introduction (and Inspiration/Motivation)}
 
-Much research has been performed concerning topic modeling. A subset of this research aims to analyze topical trends over time. Such work includes that of \cite{hall-jurafsky-manning:2008:EMNLP} where entropy, applied on chronological disjoint sets of texts, is used as a metric of showing broadening/narrowing of topics over time. Hall et al. also demonstrated that the Jensen Shannon divergence between venue\footnote{or disjoint sets of documents} pairings could be used to measure their level of similarity. This work aims to perform a similar task, but on venues that are determined by meta-data other than just conference name. Meta-data used for groupings include gender of speaker and season of year (April/October). Since our dataset is different in nature than those used by Hall et al., it is hoped that their methodology will prove to be robust enough to allow the data to speak for itself, shedding light on the topics contained in religious discourses.
+Much research has been performed concerning topic modeling. A subset of this research aims to analyze topical trends over time. Such work includes that of \cite{hall-jurafsky-manning:2008:EMNLP} where entropy, applied on chronological disjoint sets of texts, is used as a metric of showing broadening/narrowing of topics over time. Hall et al. also demonstrated that the Jensen Shannon divergence between venue\footnote{or disjoint sets of documents} pairings could be used to measure their level of similarity. This work aims to perform a similar task, but on venues that are determined by meta-data other than just conference name. Meta-data used for groupings include gender of speaker and season of year (April/October). Although our dataset is different in nature than those used by Hall et al., it is hoped that by following their methodology, we will be able to achieve the same ability to allow the data to speak for itself, shedding light on the topics contained in religious discourses.
 
 This study aims to prove the following hypotheses:
 	\begin{quote}
@@ -10,7 +10,7 @@ This study aims to prove the following hypotheses:
 
 		$H_{3}:$ Gender will have an effect on the entropy of each venue.
 
-		$H_{4}:$ The Jensen-Shannon divergence between gender will be larger than the divergences found by Hall et al..
+%		$H_{4}:$ The Jensen-Shannon divergence between gender will be larger than the divergences found by Hall et al. \cite{Blei:2003:LDA:944919.944937}.
 	\end{quote}
 
-We prove these hypotheses applying metrics on each venu alone and within pairs of venues. Resulting values are graphed over time for easy interpretation.
+We prove these hypotheses applying metrics on each venue alone and within pairs of venues. Resulting values are charted over time for easy interpretation.
