--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,8 +1,4 @@
 \section {Conclusion}
 \label{conclusion}
 
-As seen in \ref{tab:c1}-\ref{tab:overall_ml}, in every case ...
-
-
-
-%The reason that \_\_\_\_.
+The methodology of \cite{hall-jurafsky-manning:2008:EMNLP} worked! It provided a means to prove and disprove some of the proposed hypotheses as well as cast more light on the data. By combining the output Gibbs sampling and metrics such as \textit{topic entropy} and \textit{Jensen-Shannon divergence}, various subsets of the dataset could be compared and cotrasted robustly and easily.
