--- a/results.tex
+++ b/results.tex
@@ -1,71 +1,64 @@
 \section {Results}
 \label{results}
 
-\subsection {Analysis} 
-%Since $H_{1}$ concerns the mean count of xyz for each word, a one-tailed Student's Independent \textit{t}-test will be used here to determine whether the mean count of xyz for nouns are statistically significantly greater than those for adjectivs.  The threshold for significance adopted here is $0.01$.  
-
-\subsection{Total MAE (Error Over All Imitation Types)}
-Figure \ref{fig:overall} shows the overall error for each variation of the genetic algorithm. Overall, the best algorithm was algorithm 1 with an MAE of $184.89$ while the worst, algorithm 8, had an MAE of $188.82$. Since the genetic alignment algorithms are all deterministic in nature, these errors are always the same. Subsequently, their standard deviation is 0 and their average is what they are. This makes them statistically significantly different. Thus, with $p < 0.00...01$, algorithm 1 is better than all other algorithms thus far demonstrated.
+\subsection {Analysis}
+Charts will now be presented. The line charts uses time (year) on the x-axis while the y-axis is either entropy or probability. A table of words in some select topics will also be presented.
 
 \begin{figure}[center]
 	\centering
-	\includegraphics[width=16cm]{images/chart9.png}
-	\caption{Note that genetic alignment outperformed baseline in all cases.}
-	\label{fig:overall}
+	\includegraphics[width=12cm]{images/H(per-season).png}
+	\caption{Per season entropy over time. The values are basically the same value according to a $t$-test.}
+	\label{fig:entropy-per-season}
 \end{figure}
 
-\subsection{Error By Imitation Class}
-Figures \ref{fig:c1}-\ref{fig:6} demonstrate that the various versions of genetic alignment behave differently. This is expected behavior: Their preferences cause them to be more adept for certain imitation classes. The best genetic algorithm for each class is given in table \ref{tab:best-for-each}.
-
-\begin{table}[center]
-	\centering
-	\begin{center}
-		\begin{tabular}{|l|c|c|} \hline
-			\textbf{Imitation Type}	& \textbf{Best Algorithm}	&	\textbf{Error (MAE)}	\\ \hline \hline
-			1						& 1							&	147.08					\\ \hline
-			2						& 2							&	272.56					\\ \hline
-			3						& 1							&	161.01					\\ \hline
-			4						& 1							&	271.10					\\ \hline
-			5						& 1							&	183.64					\\ \hline
-			6						& 1							&	182.76					\\ \hline
-		\end{tabular}
-	\end{center}
-	\caption{Algorithm 1 has the best MAE for $6/7$ of the imitation types.}
-	\label{tab:best-for-each}
-\end{table}
-
-Interestingly, algorithm 1 is often the best algorithm. Subsequently, this is also true for the MAE over all imitation types. Algorithm 1 combined wih BP-MLP ends up being the best high-order combinational model. However, in when simple linear regression is used, algorithm 1 ends up being the worst model.
+A pair-wise t-test was computed for this series and it was found to have a \textit{p}-value of approximately $0.06$, which would generally be considered to not be statistically significant. Indeed, it appears that the April and October conferences follow each other through time in terms of entropy. This means that according to this data, hypothesis $H_2$ must be rejected.
 
 \begin{figure}[center]
 	\centering
-	\includegraphics[width=16cm]{images/chart1.png}
-	\caption{}
-	\label{fig:c1}
+	\includegraphics[width=12cm]{images/JS(April;Oct).png}
+	\caption{JS divergence over time of the two seasonal venues of conference, April and October. Although not very dynamic, there are changes over time.}
+	\label{fig:js-season}
 \end{figure}
 
-%\subsection{Best in Each Category}
-%Figures xyz %~\ref{theoreticalCombinedError} 
-%shows the lowest error achieved for each imitation type.
-
-\clearpage
-
-\subsection{BP-trained MLP Performance}
-(xyz fill this in)
+Although the entropy values of the two conferences are not significantly different, the topics used within the conference might vary. The Jensen-Shannon divergence value for April vs. October are charted in Figure \ref{fig:js-season}. Divergence does fluctuate from year to year, but not by much. Nevertheless, sometimes achieving a divergence value of 0.4, this divergence is greater than taht found for genders, demonstrated in Figure \ref{fig:js-gender}.
 
 \begin{figure}[center]
 	\centering
-	\includegraphics[width=16cm]{images/chart4.png}
-	\caption{Regression provided by machine learning trumps the errors for genetic alignment. Furthermore, higher-ordered BP-MLP models provide the lowest errors.}
-	\label{fig:overall_ml}
+	\includegraphics[width=12cm]{images/H(per-gender).png}
+	\caption{Per gender entropy over time. The values are statistically significantly different according to a $t$-test.}
+	\label{fig:entropy-per-gender}
 \end{figure}
 
-It is 
+Again, entropy is charted over time in Figure \ref{fig:entropy-per-gender}, but this time by gender. This was found to be statistically significant ($p < 0.05$) according to a pair-wise $t$-test. It is interesting to note that although the males always have a higher entropy value, they seem to be less dynamic than females. This might be because women tend to have general positions in the church for less time than men, so they end up being more transient and therefore speak fewer times. Future work could investigate this further. Hypothesis $H_3$ is accepted.
+
 \begin{figure}[center]
 	\centering
-	\includegraphics[width=12cm]{images/chart10.png}
-	\caption{An interesting correlation that lows in perceptron are highs in BP-MLP.}
-	\label{fig:perceptron_vs_bp}
+	\includegraphics[width=12cm]{images/JS(female;male).png}
+	\caption{JS divergence over time of the two genders, female and male. This divergence is less than that found in seasonal differences.}
+	\label{fig:js-gender}
 \end{figure}
+
+The JS divergence values between topics distributions over time for each gender are found in Figure \ref{fig:js-gender}. Interestingly, the lowest points on this chart correspond to the lowest in Figure \ref{fig:entropy-per-gender}. It seems that when women started speaking in general conference, they had a lower entropy (spoke on fewer topics) and didn't differ as much from what the men were saying. 
+
+\begin{figure}[center]
+	\centering
+	\includegraphics[width=14cm]{images/ToT(females).png}
+	\caption{Probabilities of usage by females for 6 topics charted over time.}
+	\label{fig:top-5-topics-ranges-female}
+\end{figure}
+
+Figures \ref{fig:top-5-topics-ranges-female} - \ref{fig:top-5-topics-ranges-male} show 5 of the  topics that had the highest range of probability of being assigned to a token in LDA. In other words. This sets them apart from other topics that are perhaps common, but do not change much. These figures support the fact that the divergences indicate that men and women are speaking on \textit{mostly} the same topics. The words that correspond to the topics in the legends for these figures is found in Table \ref{tab:select-topics} in the Appendix.
+
+%Interestingly, %algorithm 1 is often the best algorithm. Subsequently, this is also true for the MAE over all imitation types. Algorithm 1 combined wih BP-MLP ends up being the best high-order combinational model. However, in when simple linear regression is used, algorithm 1 ends up being the worst model.
+
+\begin{figure}[center]
+	\centering
+	\includegraphics[width=16cm]{images/ToT(males).png}
+	\caption{Probabilities of usage by males for 6 topics charted over time.}
+	\label{fig:top-5-topics-ranges-male}
+\end{figure}
+
+
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
